<?xml version="1.0" encoding="utf-8"?>
<resources>
  
    <string name="app_name">Shifr</string>
    <string name="button_crypt">Crypt</string>
    <string name="button_decrypt">Decrypt</string>
    
    <string name="share">Share</string>
    <string name="create_chooser">Open with</string>
    <string name="settings">Settings</string>
    <string name="quit">Exit</string>
    
    <string name="key_title">Key</string>
    <string name="key_summary">Maximum of 16 characters\n(EN a-z, RU а-я)</string>
    <string name="key_dialogTitle">Enter the key</string>
    <string name="information">Information</string>
    <string name="like_title">Rate it!</string>
    <string name="like_summary">Rate my app on Android Market :)</string>
    <string name="version">Version</string>
    <string name="versionName">1.2.2</string>
    
    <string name="exceptTitle">The field \"Key\" is empty</string>
    <string name="exceptMessage">Please enter the key</string>

</resources>