<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings">

    <EditTextPreference
      android:key="key_id"
      android:defaultValue="defaultkey"
      android:title="@string/key_title"
      android:summary="@string/key_summary"
      android:dialogTitle="@string/key_dialogTitle"
      android:maxLength="16"
      android:persistent="true" />

  </PreferenceCategory>
  
  <PreferenceCategory android:title="@string/information">
    
    <Preference
      android:key="like_button"
      android:title="@string/like_title"
      android:summary="@string/like_summary" />

    <Preference
      android:key="version"
      android:title="@string/version"
      android:enabled="false" />

  </PreferenceCategory>

</PreferenceScreen>